--- a/css/sass/_costCalculation.sass
+++ b/css/sass/_costCalculation.sass
@@ -62,3 +62,6 @@ button.cost-calculation_next
     font-size: 16px
     color: #fff
     cursor: pointer
+    transition: all 0.3s ease 0s
+button.cost-calculation_next:hover
+    transform: scale(1.1)
