--- a/css/sass/_costCalculation.sass
+++ b/css/sass/_costCalculation.sass
@@ -65,3 +65,5 @@ button.cost-calculation_next
     transition: all 0.3s ease 0s
 button.cost-calculation_next:hover
     transform: scale(1.1)
+.form-calculation1
+    display: none
