--- a/css/sass/_form-calculation2.sass
+++ b/css/sass/_form-calculation2.sass
@@ -12,3 +12,7 @@
     &_chose-file p 
         font-weight: 400
         font-size: 20px
+    &_task textarea
+        width: 570px
+        height: 219px
+        resize: none
