--- a/css/sass/_costCalculation.sass
+++ b/css/sass/_costCalculation.sass
@@ -63,6 +63,7 @@ button.cost-calculation_next
     color: #fff
     cursor: pointer
     transition: all 0.3s ease 0s
+    border-radius: 5px
 button.cost-calculation_next:hover
     transform: scale(1.1)
 .form-calculation1
