--- a/css/sass/_form-calculation2.sass
+++ b/css/sass/_form-calculation2.sass
@@ -2,6 +2,7 @@
     &_input
         display: flex
         justify-content: space-between
+        margin-top: 50px
     &_chose-file
         border: 1px solid #000
         border-style: dashed
@@ -16,3 +17,36 @@
         width: 570px
         height: 219px
         resize: none
+button.cost-calculation_back
+    position: absolute
+    left: 0
+    top: 30px
+    height: 55px
+    width: 160px
+    border: none
+    background-color: #fff
+    font-weight: 600
+    font-size: 16px
+    color: #093B54
+    cursor: pointer
+    transition: all 0.3s ease 0s
+    border: 1px solid  #093B54
+    border-radius: 5px
+button.cost-calculation_back:hover
+    transform: scale(1.1)
+button.cost-calculation_next1
+    position: absolute
+    right: 0
+    top: 30px
+    height: 55px
+    width: 160px
+    border: none
+    background-color: #093B54
+    font-weight: 600
+    font-size: 16px
+    color: #fff
+    cursor: pointer
+    transition: all 0.3s ease 0s
+    border-radius: 5px
+button.cost-calculation_next1:hover
+    transform: scale(1.1)
