--- a/css/sass/_form-calculation3.sass
+++ b/css/sass/_form-calculation3.sass
@@ -2,4 +2,19 @@
     &_input 
         text-align: center
         margin-top: 45px
-      
+    &_full-name input
+        width: 1140px
+        height: 55px
+        font-weight: 400
+        font-size: 18px
+        padding-left: 15px
+    &_email-text input
+        width: 540px
+        height: 55px
+        margin-top: 20px
+        padding-left: 15px
+        font-weight: 400
+        font-size: 18px
+    &_email-text
+        display: flex
+        justify-content: space-between
