--- a/css/sass/_orderTranslation.sass
+++ b/css/sass/_orderTranslation.sass
@@ -27,7 +27,7 @@
         width: 160px
         background-color: #fff
     &_border1
-        display: flex;
+        display: flex
         align-items: center
         border: 1px solid #fff
         border-radius: 50%
@@ -36,7 +36,7 @@
         margin: auto
         display: none
     &_border
-        display: flex;
+        display: flex
         align-items: center
         border: 1px solid #fff
         border-radius: 50%
