--- a/css/sass/_costCalculation.sass
+++ b/css/sass/_costCalculation.sass
@@ -68,3 +68,7 @@ button.cost-calculation_next:hover
     transform: scale(1.1)
 .form-calculation1
     display: none
+.cost-active
+    display: block
+.cost-disable
+    display: none
