--- a/css/sass/style1.css
+++ b/css/sass/style1.css
@@ -1283,4 +1283,80 @@ button.cost-calculation_next1:hover {
 .form-calculation3_email-text {
   display: flex;
   justify-content: space-between;
+}
+
+.modal1 {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  overflow: hidden;
+  z-index: 10;
+  top: 0;
+  left: 0;
+}
+.modal1_content {
+  right: 0;
+  left: 0;
+  text-align: center;
+  margin: auto;
+  width: 460px;
+  height: 440px;
+  background-color: #fff;
+  border-radius: 10px;
+}
+.modal1_title {
+  padding-top: 50px;
+  font-size: 30px;
+  color: #582D7F;
+  font-weight: 600;
+}
+.modal1_description {
+  font-weight: 400;
+  font-size: 20px;
+  color: #545454;
+}
+.modal1_input {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.modal1_input input {
+  width: 360px;
+  height: 55px;
+  margin-top: 15px;
+  padding: 10px;
+  font-weight: 400;
+  color: #979797;
+  box-sizing: border-box;
+}
+.modal1_button {
+  width: 360px;
+  height: 55px;
+  background-color: #582D7F;
+  border-radius: 10px;
+  color: #fff;
+  font-weight: 600;
+  font-size: 16px;
+  cursor: pointer;
+  margin-top: 50px;
+}
+
+.modal1-image {
+  position: fixed;
+  right: 30%;
+  top: 2%;
+}
+
+.modal1-image button {
+  background-color: rgba(183, 183, 183, 0);
+  cursor: pointer;
+}
+
+.modal1hide {
+  display: none;
+}
+
+.modal1show {
+  display: block;
 }/*# sourceMappingURL=style1.css.map */
