--- a/css/sass/_modal2.sass
+++ b/css/sass/_modal2.sass
@@ -3,7 +3,7 @@
     height: 100%
     background-color: rgba(0,0,0,.5)
     position: fixed
-    overflow: hidden
+    // overflow: hidden
     z-index: 10
     top: 0
     left: 0
