--- a/css/sass/style1.css
+++ b/css/sass/style1.css
@@ -578,7 +578,7 @@ ul.services_ul li {
   border-radius: 30px 0px;
 }
 .our-company_image {
-  background: url(/img/countries.png);
+  background: url(./img/countries.png);
   background-repeat: no-repeat;
   background-position: 85% 100px;
 }
@@ -651,7 +651,7 @@ ul.services_ul li {
   width: 1286px;
   height: 616px;
   border-radius: 10px;
-  background: url(/img/order-translation.png);
+  background: url(./img/order-translation.png);
   margin: auto;
   display: flex;
   flex-direction: column;
