--- a/css/sass/_midSection.sass
+++ b/css/sass/_midSection.sass
@@ -1,5 +1,5 @@
 .wallpaper
-    background: url(/img/wallpaper.png)
+    background: url(./img/wallpaper.png)
     background-repeat: no-repeat
     background-size: cover
     height: 720px
