--- a/css/sass/_settings.sass
+++ b/css/sass/_settings.sass
@@ -8,7 +8,7 @@ a
     color: #000 
     display: block
 body
-    background-image: url('/img/background.png')
+    background-image: url('./img/background.png')
     font-family: 'Montserrat', 'Sans-serif'
     font-style: normal
     font-weight: 500
