--- a/css/sass/_OurCompany.sass
+++ b/css/sass/_OurCompany.sass
@@ -3,7 +3,7 @@
     background-color: #fff
     border-radius: 30px 0px
     &_image
-        background: url(./img/countries.png)
+        background: url('../../img/countries.png')
         background-repeat: no-repeat
         background-position: 85% 100px
     &_right
