--- a/css/sass/_orderTranslation.sass
+++ b/css/sass/_orderTranslation.sass
@@ -4,7 +4,7 @@
         width: 1286px
         height: 616px
         border-radius: 10px
-        background: url(./img/order-translation.png)
+        background-image: url("../../img/order-translation.png")
         margin: auto
         display: flex
         flex-direction: column
